# react-component-lens

./: .gitattributes  .gitignore  .oxlintrc.json  .vscodeignore  AGENTS.md  Cargo.toml  LICENSE  README.md  bunfig.toml  oxlint.config.ts  package.json  tsconfig.base.json  tsconfig.json
.changepacks/: changepack_log_22xPa2FK4cjpuiabhyE-M.json  changepack_log_2jv81ub7omihWsyrujACH.json  changepack_log_7iDG_gS00akIFsB9gzpQN.json  changepack_log_9GNWxZIpYLgNuNl2AjmoG.json  changepack_log_G0WgOgi2O83P_Ld71nlcf.json  changepack_log_JbVl0BLMVXs6SgOqUKotR.json  changepack_log_NTKAeVyNh72Ys4IJm1BhK.json  changepack_log_VqJhPzx4f7DGMEqtz7kg7.json  changepack_log_XvDnakt6oO0Q1W9jzB73r.json  changepack_log_jHiMPvslkS1qlKamnkqLJ.json  changepack_log_pWu2V0g8G44h_uinWoI1n.json  changepack_log_ti_tsc7c7mDAcdRpJVTPI.json  changepack_log_uSWu1SaFG_oJCtG2jljdM.json  changepack_log_x513dPCLNyHcR1sKUiQML.json  config.json
.github/workflows/: deploy.yml
.omo/run-continuation/: ses_18747b1a7ffeCJJAIIf15dOVbp.json
conformance/: CONTRACT.md
conformance/goldens/directive/: after-statement-server.json  comments-before-client.json  plain-server.json  single-quote-client.json  use-strict-then-client.json
conformance/goldens/exports/: export-default-function.json  export-star.json  named-export-list.json  re-export-barrel.json
conformance/goldens/imports/: alias-import.json  default-client.json  member-deep.json  namespace-member.json  type-only-import.json
src/: analyzer.ts  codelens.ts  decorations.ts  extension.ts  resolver.ts
test/: analyzer.test.ts
(+83 files in other folders)
