[workspace]
resolver = "2"
members = ["packages/core", "packages/core-wasm", "packages/lsp", "packages/zed"]

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/dev-five-git/react-component-lens"

[workspace.lints.rust]
unsafe_code = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
